<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".ModeActivity"
    tools:showIn="@layout/activity_mode">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <Space
            android:layout_width="match_parent"
            android:layout_height="200dp" />

        <TextView
            android:id="@+id/mode_query"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mode_query" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="60dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <Button
                android:id="@+id/mock_mode_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mock_btn" />

            <Button
                android:id="@+id/normal_mode_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/normal_mode" />
        </LinearLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>